--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 					style="text-align: center; border: 3px solid #E1010E; background: rgba(225, 1, 14, 0.1);">
 					<h2 style="color: #E1010E; font-size: 2rem; margin-bottom: 1rem;">PARTNER WITH US TO REACH THE WORLD STAGE
 					</h2>
-					<a href="mailto:contact@laquicheindustrielle.com" class="cta-button" style="margin-top: 0;">Contact Us
+					<a href="mailto:laquicheindustrielle@gmail.com" class="cta-button" style="margin-top: 0;">Contact Us
 						Now</a>
 				</div>
 			</div>
@@ -806,7 +806,7 @@
 				</div>
 
 				<div style="text-align: center; margin-top: 2rem;">
-					<a href="mailto:contact@laquicheindustrielle.com" class="cta-button">Discuss Partnership</a>
+					<a href="mailto:laquicheindustrielle@gmail.com" class="cta-button">Discuss Partnership</a>
 				</div>
 			</div>
 		</div>
@@ -865,7 +865,7 @@
 				<h1>Technical Innovation</h1>
 
 				<div style="text-align: center; margin-bottom: 3rem;">
-					<a href="https://github.com/La-Quiche-Industruelle/Robocup-2025" target="_blank"
+					<a href="https://github.com/La-Quiche-Industrielle/Robocup-2025" target="_blank"
 						class="technical-details-button">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
 							<path
@@ -881,7 +881,7 @@
 					<h2>360° Vision System</h2>
 					<p>Custom mathematical algorithms create cone shapes for uniform field mapping - giving us major advantages
 						over standard distorted mirrors.</p>
-					<a href="https://github.com/La-Quiche-Industruelle/Robocup-2025/tree/main/Cone%20Design" target="_blank"
+					<a href="https://github.com/La-Quiche-Industrielle/Robocup-2025/tree/main/Cone%20Design" target="_blank"
 						style="display: inline-flex; align-items: center; gap: 0.5rem; color: #E1010E; font-weight: 600; text-decoration: none; margin-top: 0.5rem;">
 						<svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
 							<path
@@ -997,7 +997,7 @@
 				<h1>Ready to Partner?</h1>
 				<p style="font-size: 1.2rem; max-width: 600px;">Join us on our journey to the world championships. Your
 					investment directly supports young French engineers competing on the global stage.</p>
-				<a href="mailto:contact@laquicheindustrielle.com" class="cta-button"
+				<a href="mailto:laquicheindustrielle@gmail.com" class="cta-button"
 					style="font-size: 1.2rem; padding: 1.2rem 2.5rem;">Start Our Partnership</a>
 			</div>
 		</div>
